k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 460678531020.dkr.ecr.us-east-1.amazonaws.com/pipeline-backend:latest
          ports:
            - containerPort: 8000
